<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/navCat7"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/none"
        android:cropToPadding="true"
        android:src="@drawable/ic_chick" />

    <TextView
        android:id="@+id/aboutDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/navCat7Detail"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/clientLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/clientLink"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0f0094" />

    <TextView
        android:id="@+id/devLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/devLink"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0f0094" />

    <TextView
        android:id="@+id/legalLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/legal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0f0094" />

    <Button
        android:id="@+id/dialogClose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_dialog"
        android:text="@string/Close"
        android:textColor="#fff" />

</LinearLayout>