<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hr.efzg.pculina.efzgraspored.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:id="@+id/noInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/noInternetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/internet"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/noInternetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noInternetText"
            android:layout_centerHorizontal="true"
            android:text="@string/internetBtn" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/MyScheduleEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/MySchedEmpty"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listViewCustom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="0dp" />

    <WebView
        android:id="@+id/isvuWeb"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateOnly="false" />

</RelativeLayout>
